# pg_ai_query

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DIRENV_SETUP.md  NIX.md  README.md  flake.nix
.agents/commands/: gh-issue
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  installation_issue.yml
.github/workflows/: ci.yml  docs.yml  security.yml
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  installation.md  introduction.md  nix-development.md  troubleshooting.md
sql/: pg_ai_query--1.0.sql
src/: config.cpp  pg_ai_query.cpp  prompts.cpp  test_config.cpp  test_config_no_file.cpp  utils.cpp
src/core/: logger.cpp  query_generator.cpp
src/include/: config.hpp  logger.hpp  prompts.hpp  query_generator.hpp  utils.hpp
